--- a/index.html
+++ b/index.html
@@ -14,3 +14,27 @@ But it must have the following features:
 6. Read about the text-transform property on MDN docs to make the h1 uppercase with CSS.
   https://developer.mozilla.org/en-US/docs/Web/CSS/text-transform 
 -->
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+<title>Funny Meme</title>
+<link rel="stylesheet" href="./style.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Caveat&family=Libre+Baskerville&family=Onest:wght@100&family=Pixelify+Sans&display=swap" rel="stylesheet">
+</head>
+
+<body>
+
+  <div class="box">
+  <img class="motivation-img" src="./assets/images/Tony.jpeg">
+  <h1>That Look You Give</h1>
+  <p>When someone wants to hit your Zaza</p>
+  </div>
+
+</body>
+
+</html>
