--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ But it must have the following features:
   <div class="box">
   <img class="motivation-img" src="./assets/images/Tony.jpeg">
   <h1>That Look You Give</h1>
-  <p>When someone wants to hit your Zaza</p>
+  <p>When someone aks if you have been to therapy</p>
   </div>
 
 </body>
